// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interested-party-comments GET /review-comment with data should render review comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Review comment</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <dl class="govuk-summary-list">
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
                        <dd class="govuk-summary-list__value">Lee Thornton</dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
                        <dd class="govuk-summary-list__value">test1@example.com</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=true"> Add<span class="govuk-visually-hidden"> address</span></a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Submitted</dt>
                        <dd class="govuk-summary-list__value">9 October 2024</dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
                        <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact"> Redact</a>
                        </dd>
                    </div>
                    <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
                        <dd class="govuk-summary-list__value">Not provided</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
                        </dd>
                    </div>
                </dl>
                <div class="govuk-form-group">
                    <div class="govuk-checkboxes" data-module="govuk-checkboxes">
                        <div class="govuk-checkboxes__item">
                            <input class="govuk-checkboxes__input" id="site-visit-request" name="site-visit-request"
                            type="checkbox" value="site-visit">
                            <label class="govuk-label govuk-checkboxes__label" for="site-visit-request">The comment includes a site visit request</label>
                        </div>
                    </div>
                </div>
                <div class="govuk-form-group">
                    <fieldset class="govuk-fieldset">
                        <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">What is the outcome of your review?</legend>
                        <div class="govuk-radios"
                        data-module="govuk-radios">
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status" name="status" type="radio"
                                value="valid">
                                <label class="govuk-label govuk-radios__label" for="status">Comment valid</label>
                            </div>
                            <div class="govuk-radios__item">
                                <input class="govuk-radios__input" id="status-2" name="status" type="radio"
                                value="invalid">
                                <label class="govuk-label govuk-radios__label" for="status-2">Comment invalid</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <div class="govuk-!-margin-bottom-3"></div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Confirm</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`interested-party-comments GET /view-comment with data should render view comment page with the provided comment details 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
            <h1             class="govuk-heading-l">View comment</h1>
        </div>
    </div>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Interested party</dt>
            <dd class="govuk-summary-list__value">Lee Thornton</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Email</dt>
            <dd class="govuk-summary-list__value">test1@example.com</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Address</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/edit/address?review=false"> Add<span class="govuk-visually-hidden"> address</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Site visit requested</dt>
            <dd class="govuk-summary-list__value">No</dd>
        </div>
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions"><dt class="govuk-summary-list__key"> Submitted</dt>
            <dd class="govuk-summary-list__value">9 October 2024</dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Comment</dt>
            <dd class="govuk-summary-list__value">Awaiting review comment 47</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/2/interested-party-comments/3670/redact"> Redact</a>
            </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Supporting documents</dt>
            <dd class="govuk-summary-list__value">Not provided</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="#"> Add<span class="govuk-visually-hidden"> supporting documents</span></a>
            </dd>
        </div>
    </dl>
    <div class="govuk-!-margin-bottom-3"></div>
</main>"
`;
